Fix vertical spacing inconsistency

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5, h6,
 hr, p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: 25px;
 }
 
 
